[FIX] mail: attach the dropzone to the chatter
Before this commit the dropzone was relative to div.content. This would create
some bad position where the dropzone was covering the form view but not the
chatter.

task-2389929

closes odoo/odoo#62402

X-original-commit: bb650a9a1f4ff8280bd1e3467624991bc87517b9

--- a/addons/mail/static/src/components/drop_zone/drop_zone.scss
+++ b/addons/mail/static/src/components/drop_zone/drop_zone.scss
@@ -5,8 +5,8 @@
 .o_DropZone {
     display: flex;
     position: absolute;
+    top: 0;
     left: 0;
-    bottom: 0;
     height: 100%;
     width: 100%;
     z-index: 1;
